10-drift/0-drift-security-group.json
{
    "Parameters": {
        "VPCId": {
            "Description": "VPC to create the security group into",
            "Type": "AWS::EC2::VPC::Id"
        }
    },
    "Resources": {
        "SSHSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Test Drift SSH Security Group",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "10.0.0.0/25",
                        "FromPort": 22,
                        "ToPort": 22,
                        "IpProtocol": "tcp"
                    }
                ],
                "VpcId": {"Ref": "VPCId"}
            }
        },
        "HTTPSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Test Drift HTTP Security Group",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": 80,
                        "ToPort": 80,
                        "IpProtocol": "tcp"
                    }
                ],
                "VpcId": {"Ref": "VPCId"}
            }
        }
    }
}
